fix: fixed emails href, done text-overflow ellipsis in header info

--- a/task3/src/components/Footer/Footer.scss
+++ b/task3/src/components/Footer/Footer.scss
@@ -246,7 +246,7 @@ footer {
             .social-networks {
                 justify-content: center;
                 .social-link:nth-last-child(1) svg {
-                    margin-right: 3px;
+                    margin-right: 1px;
                 }
             }
             .copyright {
