--- a/task3/src/components/Header/Header.scss
+++ b/task3/src/components/Header/Header.scss
@@ -143,6 +143,13 @@ header .mobile-header {
     margin-right: -12px;
 }
 
+.header-user {
+    width: 121px;
+    text-align: right;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .menuOpen:hover svg g {
     fill: #2638bb;
 }
